feat(js): close LOG001 (kof.log on JS) + runtime fixes
- kof.log on JS: kofLog* console.* with KOF_LOG_LEVEL parity; KofLog
  supportedOn now includes JS (LOG001 closed, KofLogE2ETest 11/11).
- JVM runtime: Vulkan (FFM preview API on JDK 21) block now included only
  when the program uses kof.vk (capability/link-by-use R2); --enable-preview
  applied only for Vulkan programs so regular classfiles stay non-preview.
- JvmVkRuntime: JDK 21-compatible allocation (MemorySegment.ofArray instead
  of Arena.allocateFrom(String), which is JDK 22+).
- ensureCompiled(Path, List, boolean) new signature; KofWsFrameTest updated.
- docs: backend-parity, stdlib-logging, roadmap, actual-state,
  ecosystem-coverage, plan-spring-independence, ACTION_PLAN updated.